--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,11 +2,11 @@ version: '3.8'
 
 services:
   api:
-    build: .
+    image: ghcr.io/josefinolis/ia-investing:latest
     container_name: ia-trading-api
     restart: unless-stopped
-    expose:
-      - "8000"
+    ports:
+      - "8000:8000"
     environment:
       - DATABASE_URL=postgresql://ia_trading:${POSTGRES_PASSWORD}@db:5432/ia_trading
       - ALPHA_VANTAGE_API_KEY=${ALPHA_VANTAGE_API_KEY}
@@ -34,21 +34,6 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
-    networks:
-      - ia-trading-network
-
-  nginx:
-    image: nginx:alpine
-    container_name: ia-trading-nginx
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-    depends_on:
-      - api
     networks:
       - ia-trading-network
 
