docs: simplify documentation, remove obsolete files

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,19 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # Alpha Vantage API Key
 # Get yours at: https://www.alphavantage.co/support/#api-key
 ALPHA_VANTAGE_API_KEY=your_alpha_vantage_key_here
+
+# Reddit API Configuration (optional - for social sentiment)
+# Get credentials at: https://www.reddit.com/prefs/apps
+# 1. Click "create another app..."
+# 2. Select "script" as the type
+# 3. Use http://localhost:8080 as redirect URI
+REDDIT_CLIENT_ID=your_reddit_client_id_here
+REDDIT_CLIENT_SECRET=your_reddit_client_secret_here
+# REDDIT_SUBREDDITS=wallstreetbets,stocks,investing,stockmarket,options
+# REDDIT_MIN_SCORE=10
+
+# Twitter/X Configuration (optional - uses snscrape, no API key needed)
+# TWITTER_ENABLED=true
+# TWITTER_MIN_LIKES=10
+# TWITTER_MIN_RETWEETS=5
+# TWITTER_MAX_RESULTS=50
