--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,6 +101,7 @@ jobs:
               -e ALPHA_VANTAGE_API_KEY=${{ secrets.ALPHA_VANTAGE_API_KEY }} \
               -e GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} \
               -e SCHEDULER_ENABLED=false \
+              -e TWITTER_ENABLED=true \
               -e LOG_LEVEL=INFO \
               ghcr.io/josefinolis/ia-investing:latest
 
